# ldw-merge-skills-aula

./: README.md  docker-compose.yml
apps/backend/: .env.example  pyproject.toml
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 001_criar_tabelas.py  002_motor_progresso.py
apps/backend/src/: app.py  database.py  models.py
apps/backend/src/routes/: courses.py  health.py  lessons.py  progress.py  questions.py
apps/backend/src/schemas/: course_schema.py  lesson_schema.py  progress_schema.py  question_schema.py
apps/backend/src/scripts/: seed.py
apps/frontend/: hello.py  main.py  pyproject.toml
apps/frontend/src/: api.py  state.py
apps/frontend/src/components/: app_bar.py  cards.py  layout.py
apps/frontend/src/views/: courses.py
